fix: change input size and gap between input and label, change type of masking (to attributes in pug)

--- a/src/components/text-field/text-field.scss
+++ b/src/components/text-field/text-field.scss
@@ -1,5 +1,8 @@
 .text-field {
     &__label {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
         transition: all 0.3s ease-in-out;
 
         &:hover {
@@ -12,17 +15,20 @@
 
     &__input {
         padding: 1.5rem 1.3rem;
-        
+        max-width: 32rem;
+        max-height: 4.4rem;
+
         border: 0.1rem solid $clr-dark-25p;
         border-radius: 0.4rem;
         color: $clr-dark-25p;
 
         transition: all 0.3s ease-in-out;
 
-        &:focus, &:active {
+        &:focus,
+        &:active {
             outline: none;
             border: 0.1rem solid $clr-dark-50p;
-            
+
             color: $clr-dark-75p;
         }
     }
